center and fix spacing on project cards

--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,7 +1,10 @@
 .projects-container {
   margin-top: 40px;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
+  width: 1200px;
+  max-width: 90%;
 
   .project_card {
     display: flex;
@@ -20,32 +23,17 @@
     }
   }
 
-  .project_card-action {
+  .project_card-title_container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 10px;
     background-color: $secondary-dark;
+    text-decoration: none;
 
     .project_card-title {
       font-family: $primary-font;
       color: $white;
-    }
-
-    .project_card-action_links {
-      display: flex;
-      justify-content: space-around;
-
-      a {
-        color: $white;
-        margin: 0 5px;
-        cursor: pointer;
-      }
-
-      a:hover {
-        color: $primary-light;
-      }
     }
   }
 
