--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -2,3 +2,7 @@ body, main, div, article, section, h1, h2, h3, h4, h5, h6, p, button, form, a, u
   margin: 0;
   padding: 0;
 }
+
+a {
+  text-decoration: none;
+}
