--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,8 +38,8 @@ body {
 }
 
 .main {
-  align-self: center;
   display: flex;
+  justify-content: center;
 }
 
 form {
